[package]
name = "kind-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
ws = "0.9.2"
message-io = { version = "0.14", default-features = false, features = ["websocket"] }

[dev-dependencies]
proptest = "1.0.0"